syntax = "proto3";

package pb;

option go_package = "./;pb";


message AuthReq {
    int64 connID = 1;
    string uid = 2;
    uint32 deviceFlag = 3;
    string deviceID = 4;
    string gatewayID = 5;
    uint32 protoVersion = 6;
    string token = 7;
    string clientKey = 8;
}

message AuthResp {
    uint32 deviceLevel = 1;
    string aesKey = 2;
    string aesIV = 3;
    string dhServerPublicKey = 4;
}

message ResetReq {
    string nodeID = 1;
 }

message ClientCloseReq {
    string uid = 1;
    uint32 deviceFlag = 2;
    int64 connID = 3;
}



message Conn {
    int64 id = 1;
    string uid = 2;
    uint32 deviceFlag = 3;
    string deviceID = 4;
    uint32 deviceLevel = 5;
    string gatewayID = 6;
    uint32 protoVersion = 7;
}